--- a/index.css
+++ b/index.css
@@ -112,7 +112,7 @@ style du logo facebook
     padding-left: 100px;
 }
 #paragraphelong{
-    font-size:13px;
+    font-size:10px;
 }
 .colonneDeLabel{
     margin:0px;
@@ -136,5 +136,7 @@ style du logo facebook
 }
 #btn{
     width: 165px;
-    margin-left: 150px;
+    border: 1px solid #29487d;
+    font-size:20px;
+    color:white; 
 }
